--- a/intex.html
+++ b/intex.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="./aidin/index.html"></a>
-    <a href="./sara.html/intex.html"></a>
-    <a href="./"></a>
+    <a href="./aidin/index.html">aidin</a>
+    <a href="./sara/index.html">sara</a>
+    <a href="./javadk/index.html">javad</a>
 </body>
 </html>
