--- a/intex.html
+++ b/intex.html
@@ -9,5 +9,5 @@
     <a href="./aidin/index.html">aidin</a>
     <a href="./sara/index.html">sara</a>
     <a href="./javadk/index.html">javad</a>
-</body>
+</body>\
 </html>
