update aidin/index.html, intex.html and style.css

--- a/intex.html
+++ b/intex.html
@@ -1,14 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./style/style.css">
 </head>
+
 <body>
-    <a href="./aidin/index.html">aidin</a>
-    <a href="./sara/index.html">sara</a>
-    <a href="./javadk/index.html">javad</a>
-</body>\
+    <header class="header">
+        <div>
+            <h2>LOGO</h2>
+        </div>
+        <div>
+            <a href="#">
+
+                        
+                        Home
+
+            </a>
+            <a href="#">
+
+
+                        About
+
+            </a>
+            <a href="#">
+
+
+                        Blog
+
+            </a>
+        </div>
+    </header>
+    <main class="team">
+        <a href="./aidin/index.html">
+            <div>
+                <p>
+
+                    aidin
+                </p>
+            </div>
+        </a>
+        <a href="./sara/index.html">
+            <div>
+                <p>
+
+                    sara
+                </p>
+            </div>
+        </a>
+        <a href="./javadk/index.html">
+            <div>
+                <p>
+
+                    javad
+                </p>
+            </div>
+        </a>
+    </main>
+</body>
+
 </html>
