--- a/aidin/index.html
+++ b/aidin/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aidin rezaei</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <div>
+            <h3>Aidin Rezaei</h3>
+        </div>
+        <div class="menu">
+            <ul>
+                <li>home</li>
+                <li>about</li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <section id="home">
+            <div>
+
+            </div>
+            <div>
+
+            </div>
+        </section>
+        <section id="about">
+
+        </section>
+    </main>
 </body>
 </html>
